modified manifest for custom install profile support

--- a/templates/settings.php.erb
+++ b/templates/settings.php.erb
@@ -573,4 +573,4 @@ $conf['404_fast_html'] = '<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN"
  */
 # $conf['allow_authorize_operations'] = FALSE;
 
-$conf['install_profile'] = 'standard';
+$conf['install_profile'] = '<%= @install_profile %>';
